# ChangeLog for app-editors/bluefish
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/bluefish/ChangeLog,v 1.37 2005/01/16 11:44:50 hanno Exp $

  16 Jan 2005; Hanno Boeck <hanno@gentoo.org> bluefish-0.13.ebuild:
  Mark stable x86.

  19 Dec 2004; Hanno Boeck <hanno@gentoo.org> bluefish-0.13.ebuild:
  Change einstall to make install (thanks to Matthias Dahl in bug 74174).

*bluefish-0.13 (07 Dec 2004)

  07 Dec 2004; Hanno Boeck <hanno@gentoo.org> +bluefish-0.13.ebuild:
  Version bump, thanks to various people in bug #47447.

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  bluefish-0.11.ebuild, bluefish-0.12.ebuild:
  Masked bluefish-0.12.ebuild stable for ppc

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  bluefish-0.11.ebuild:
  Masked bluefish-0.11.ebuild stable for ppc

  17 Aug 2004; Tom Gall <tgall@gentoo.org> bluefish-0.12.ebuild:
  stable on ppc64, bug #58313

  19 Mar 2004; Aron Griffis <agriffis@gentoo.org> bluefish-0.12.ebuild:
  stable on alpha and ia64

  22 Jan 2004; <augustus@gentoo.org> bluefish-0.12.ebuild:
  Added ~amd64 keyword.  Seems to compile and run fine.

  09 Jan 2004; Jason Wever <weeve@gentoo.org> bluefish-0.12.ebuild:
  Marked stable on sparc.

  04 Dec 2003; Jason Wever <weeve@gentoo.org> bluefish-0.11.ebuild:
  Marked stable on sparc.

  26 Nov 2003; Luca Barbato <lu_zero@gentoo.org> bluefish-0.12.ebuild:
  Fix the .desktop iconpath

*bluefish-0.12 (25 Nov 2003)

  25 Nov 2003; Hanno Boeck <hanno@gentoo.org> bluefish-0.12.ebuild:
  Version bump.

  02 Nov 2003; Hanno Boeck <hanno@gentoo.org> bluefish-0.11.ebuild:
  Fix for menu icon in gnome (bug 31770).

*bluefish-0.11 (05 Aug 2003)

  05 Aug 2003; Luca Barbato <lu_zero@gentoo.org> bluefish-0.11.ebuild :
  Version bump, thanks to Nicolas Kaiser <nikai@nikai.net> for the 
  notice

*bluefish-0.10 (21 Jul 2003)

  25 Jul 2003; foser <foser@gentoo.org> bluefish-0.10.ebuild :
  deps correction
