@@ -1,11 +1,13 @@
-MD5 65a13418cd38f0975799fe23e6b0ec6d ChangeLog 4844
+MD5 8570668c807fce1d1ceb0f3e6487b6c1 ChangeLog 4958
 MD5 b0b41f91ce532c18e4945e7ca37a3d81 bluefish-0.11.ebuild 1406
 MD5 933c86977050493cf6e6aa46b6aef967 bluefish-0.12.ebuild 1710
 MD5 a10b0e2edcba0587686e6a1926b90975 bluefish-0.9.ebuild 928
 MD5 a72a06a37ca4e5905085ebff07fe9e9e metadata.xml 217
 MD5 695295554b51b725243a685e60bbe629 bluefish-0.13.ebuild 840
+MD5 10098987f91d5f2d90e92cdee9a5a4bb bluefish-1.0.ebuild 898
 MD5 ec89a2b6c6e9739aae723eb9c35db6aa files/digest-bluefish-0.11 66
 MD5 e60836fae74fcfb183148e9df9dc75df files/digest-bluefish-0.12 66
 MD5 bc9b63ac2469bf96338ac088068828da files/digest-bluefish-0.9 65
 MD5 870f031f504c06b82c5c85a73b813a02 files/digest-bluefish-0.13 67
 MD5 3b49e1ecdc735c10a145dd6dc9c528ee files/bluefish-make-destdir.patch 2052
+MD5 4f4082139d50854cf37bf254207ad1b1 files/digest-bluefish-1.0 66
